# localATISaero_Modified

./: CMakeCache.txt  cmake_install.cmake
ESP32_and_ARDUINO/ESP32/Display_read_and_sending_datas_ESP/: Display_read_and_sending_datas_ESP.ino
RASPI/RamMonitoring/: CpuRamMonitoring.py  RamMonitoring.py  RamMonitoring0.py.save  temptemp.txt.save
RASPI/SDR/: main.py  test.py
RASPI/cSDR/: CMakeLists.txt  Makefile  main.cpp  run
RASPI/localATISaero/: aeronautics  config.json  main.cpp
RASPI/localATISaero/pythonModules/: decimate.py
Raspi/: .Makefile.swp  .main.swp  Makefile  aeronautics  main.cpp
Raspi/include/: cmake_install.cmake
emitter/Arduino/Imitate_captors/: Imitate_captors.ino
emitter/Arduino/Reading_MPL115A2/: Reading_MPL115A2.ino
emitter/Arduino/Reading_MPL_and_sending_datas/: Reading_MPL_and_sending_datas.ino
emitter/ESP32 (LILYGO ttgo t-display esp32)/Display_and_sending_datas_ESP/: Display_and_sending_datas_ESP.ino
emitter/ESP32 (LILYGO ttgo t-display esp32)/Display_and_sending_datas_ESP_V2/: Display_and_sending_datas_ESP_V2.ino
emitter/ESP32 (LILYGO ttgo t-display esp32)/sending_datas_ESP/: sending_datas_ESP.ino
include/: Makefile
